--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
-
 title: "Partner Resources"
-author: Microsoft
-description: Resources created by Microsoft's GPS (Global Partner Solutions) team
+author: SeanKe11y
+description: Resources cloned from Microsoft's GPS (Global Partner Solutions) team
 baseurl: "/PartnerResources"
 
 back_to_top: true
@@ -10,12 +9,12 @@ back_to_top_text: "Back to top"
 footer_content: "Copyright &copy; 2022 Microsoft"
 
 # Social (First three Required)
-repo: "https://github.com/microsoft/PartnerResources"
-github_user: "microsoft"
+repo: "https://github.com/SeanKe11y/PartnerResources"
+github_user: "SeanKe11y"
 github_repo: "PartnerResources"
 github_branch: "main"
-twitter: microsoft
-linkedin: microsoft
+twitter: SeanKe11y
+linkedin: SeanKe11y
 
 logo_pixels: 34
 color: "#FFFFFF"
@@ -38,7 +37,7 @@ includeappinsights: true
 
 accentColor: blue
 themeColor: blue
-fixedNav: 'true' # true or false
+fixedNav: "true" # true or false
 
 last_edit_timestamp: true
 last_edit_time_format: "%b %e %Y at %I:%M %p"
@@ -60,8 +59,7 @@ defaults:
       type: "docs"
     values:
       layout: page
-  -
-    scope:
+  - scope:
       path: ""
       type: "pages"
     values:
